--- a/kv-memory-lb2x/package.json
+++ b/kv-memory-lb2x/package.json
@@ -12,7 +12,7 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
-    "loopback": "git://github.com/strongloop/loopback.git",
+    "loopback": "^2.36.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-datasource-juggler": "^2.39.0",
