Fix url in kv-memory-lb2x/package.json

--- a/kv-memory-lb2x/package.json
+++ b/kv-memory-lb2x/package.json
@@ -31,6 +31,9 @@
     "type": "",
     "url": ""
   },
+  "bugs": {
+    "url": "https://github.com/strongloop/loopback-example-kv-connectors/issues"
+  },
   "license": "UNLICENSED",
   "description": "kv-memory-lb2x"
 }
